--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^16.18.19",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/react-slider": "^1.3.1",
     "@types/video-react": "^0.15.1",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
@@ -27,11 +29,14 @@
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-lazy-load-image-component": "^1.5.6",
+    "react-loading-skeleton": "^3.2.0",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "react-slider": "^2.0.4",
     "react-star-review": "^1.2.0",
     "react-table": "^7.8.0",
     "redux-logger": "^3.0.6",
