--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,31 +1,26 @@
 {
   "name": "hekto",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "gen": "graphql-codegen --config codegen.yml"
+  },
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@apollo/client": "^3.7.9",
     "@hookform/resolvers": "^2.9.11",
     "@reduxjs/toolkit": "^1.9.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.19",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-lazy-load-image-component": "^1.5.2",
-    "@types/react-slider": "^1.3.1",
-    "@types/video-react": "^0.15.1",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
-    "faker": "^6.6.6",
     "framer-motion": "^6",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "graphql-toolkit": "^0.7.5",
-    "react": "^18.2.0",
-    "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
@@ -34,7 +29,6 @@
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-slider": "^2.0.4",
     "react-star-review": "^1.2.0",
@@ -43,38 +37,19 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
-    "typescript": "^4.9.5",
     "use-react-router-breadcrumbs": "^4.0.1",
     "video-react": "^0.16.0",
-    "web-vitals": "^2.1.4",
     "yup": "^1.0.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "gen": "graphql-codegen --config codegen.yml"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
+    "faker": "^6.6.6",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.19",
+    "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/react-slider": "^1.3.1",
+    "@types/video-react": "^0.15.1",
     "@faker-js/faker": "^7.6.0",
     "@graphql-codegen/cli": "3.0.0",
     "@graphql-codegen/typescript": "3.0.0",
@@ -84,6 +59,12 @@
     "@types/react-table": "^7.7.14",
     "@types/redux-logger": "^3.0.9",
     "@types/yup": "^0.32.0",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "typescript": "^4.9.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.2.0"
   }
 }
