--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,20 +10,22 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@apollo/client": "^3.7.9",
     "@hookform/resolvers": "^2.9.11",
     "@reduxjs/toolkit": "^1.9.2",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
+    "currency.js": "^2.0.4",
     "framer-motion": "^6",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "graphql-toolkit": "^0.7.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-image-magnify": "^2.7.4",
     "react-lazy-load-image-component": "^1.5.6",
     "react-loading-skeleton": "^3.2.0",
     "react-paginate": "^8.1.4",
@@ -42,29 +44,30 @@
     "yup": "^1.0.0"
   },
   "devDependencies": {
-    "faker": "^6.6.6",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.19",
-    "@types/react-lazy-load-image-component": "^1.5.2",
-    "@types/react-slider": "^1.3.1",
-    "@types/video-react": "^0.15.1",
     "@faker-js/faker": "^7.6.0",
     "@graphql-codegen/cli": "3.0.0",
     "@graphql-codegen/typescript": "3.0.0",
     "@graphql-codegen/typescript-operations": "3.0.0",
     "@graphql-codegen/typescript-react-apollo": "3.3.7",
-    "@types/axios": "^0.14.0",
-    "@types/react-table": "^7.7.14",
-    "@types/redux-logger": "^3.0.9",
-    "@types/yup": "^0.32.0",
-    "redux-devtools-extension": "^2.13.9",
-    "typescript": "^4.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.19",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-image-magnify": "^2.7.1",
+    "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/react-slider": "^1.3.1",
+    "@types/react-table": "^7.7.14",
+    "@types/redux-logger": "^3.0.9",
+    "@types/video-react": "^0.15.1",
+    "@types/yup": "^0.32.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "faker": "^6.6.6",
+    "redux-devtools-extension": "^2.13.9",
+    "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
 }
